--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/o2sevruk/udacity-react-nanodegree--practice--react-and-redux#readme",
   "devDependencies": {
+    "babel-eslint": "^10.1.0",
     "eslint": "^7.19.0",
     "eslint-config-prettier": "^7.2.0",
     "husky": "^4.3.8",
